--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,13 +12,18 @@ python = "^3.11"
 markdownify = "0.11.2"
 numpy = "1.23.1"
 pandas = "1.4.3"
-requests = "2.28.1"
+requests = "2.31.0"
 typer = "0.6.1"
 rich = "12.5.1"
 strict-rfc3339 = "0.7"
+urllib3 = "2.0.7"
 
 [tool.poetry.scripts]
 take-snapshot = "take_snapshot.main:app"
+
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.1.5"
+black = "^23.11.0"
 
 [build-system]
 requires = ["poetry-core"]
