--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
 markdownify==0.11.2
 numpy==1.26.2
 pandas==2.1.3
-requests==2.28.1
+requests==2.31.0
 typer==0.6.1
 rich==12.5.1
 strict_rfc3339==0.7
+urllib3==2.0.7
